Activate building idmap_ad
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1019 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -28,6 +28,7 @@ samba (3.0.21b-1) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * activate building of idmap_rid. Closes: #284681.
     Thanks to Ubuntu patches
+  * activate building of idmap_ad. Closes: #341814
   * modify the long description of the libsmbclient-dev package to
     avoid repeating the long description. Thanks, linda.
 
