--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+samba (1:3.2.0~pre3-1) experimental; urgency=low
+
+  * New upstream version
+  * debian/patches/fix-manpage-htmlchars.patch: dropped as fixed upstream
+  * docs/registry removed from samba-doc as missing from upstream tarball
+    (upstream bug #5421)
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 26 Apr 2008 08:20:21 +0200
+
 samba (1:3.2.0~pre2-2) experimental; urgency=low
 
   [ Christian Perrier ]
