--- a/changelog
+++ b/changelog
@@ -27,6 +27,7 @@ samba (1:3.0.28a-3) UNRELEASED; urgency=low
   * Add doc-base files for samba-doc-pdf. Closes: #451685
   * Remove "socket options" from smb.conf (the value that was set
     is the default value). Closes: #476104
+  * Kurdish. Closes: #480151
 
  -- Christian Perrier <bubulle@debian.org>  Wed, 16 Apr 2008 23:14:46 +0200
 
