--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (1:3.0.29-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Christian Perrier <bubulle@debian.org>  Thu, 22 May 2008 07:31:55 +0200
+
 samba (1:3.0.28a-3) unstable; urgency=low
 
   * The "bug hunting at SambaXP" release
