--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (1:3.0.30-1) unstable; urgency=high
+
+  * New upstream release: fix a heap overflow when parsing SMB responses in
+    client code. (CVE-2008-1105). Closes: #483410
+
+ -- Christian Perrier <bubulle@debian.org>  Wed, 28 May 2008 22:38:44 +0200
+
 samba (1:3.0.29-1) unstable; urgency=low
 
   * New upstream release
