--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (1:3.2.0~rc1-1) unstable; urgency=low
+
+  * New upstream version
+  * debian/samba-doc.doc-base.samba-using: index file is no named toc.html
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 30 May 2008 20:22:57 +0200
+
 samba (1:3.2.0~pre3-1) experimental; urgency=low
 
   * New upstream version
