--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+samba (2:3.0.30-2) unstable; urgency=high
+
+  * Brown paper bag releae with epoch increased after yet another
+    accidental upload of 3.2.0 to unstable. Sigh and apologies to
+    autobuilders.
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 31 May 2008 12:08:50 +0200
+
 samba (1:3.0.30-1) unstable; urgency=high
 
   * New upstream release: fix a heap overflow when parsing SMB responses in
