--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (2:3.2.0~rc1-2) experimental; urgency=low
+
+  * Reupload to experimental. Sigh.
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 31 May 2008 11:08:14 +0200
+
 samba (1:3.2.0~rc1-1) unstable; urgency=low
 
   * New upstream version
