Enable building of cifs.spnego for the smbfs package, adding a build-dependency on keyutils-dev, to allow kerberos-based authentication of cifs mounts.  Closes: #480663, LP: #236830.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba/experimental/debian@1921 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,11 @@
+samba (2:3.2.0~rc1-3) UNRELEASED; urgency=low
+
+  * Enable building of cifs.spnego for the smbfs package, adding a
+    build-dependency on keyutils-dev, to allow kerberos-based authentication
+    of cifs mounts.  Closes: #480663, LP: #236830.
+
+ -- Steve Langasek <vorlon@debian.org>  Mon, 09 Jun 2008 14:40:19 -0700
+
 samba (2:3.2.0~rc1-2) experimental; urgency=low
 
   * Reupload to experimental. Sigh.
