--- a/changelog
+++ b/changelog
@@ -1,9 +1,16 @@
 samba (2:3.0.30-3) UNRELEASED; urgency=low
 
+  [ Christian Perrier ]
+  * add a soft dependency on slapd in init script to allow
+    proper operation when dependency-based boot sequence is enabled.
+    Thanks to Petter Reinholdtsen for reporting and providing a patch
+    Closes: #478800
+
+  [ Steve Langasek ]
   * debian/patches/no-unnecessary-cups.patch: don't try to connect to a cups
     server when we know that no printers are configured.  Closes: #479512.
 
- -- Steve Langasek <vorlon@debian.org>  Sat, 07 Jun 2008 19:43:27 -0700
+ -- Christian Perrier <bubulle@debian.org>  Tue, 10 Jun 2008 20:28:51 +0200
 
 samba (2:3.0.30-2) unstable; urgency=high
 
