--- a/changelog
+++ b/changelog
@@ -1,10 +1,14 @@
-samba (2:3.2.0~rc1-3) UNRELEASED; urgency=low
+samba (2:3.2.0~rc2-1) experimental; urgency=low
 
+  [ Christian Perrier ]
+  * New upstream release
+
+  [ Steve Langasek ]
   * Enable building of cifs.spnego for the smbfs package, adding a
     build-dependency on keyutils-dev, to allow kerberos-based authentication
     of cifs mounts.  Closes: #480663, LP: #236830.
 
- -- Steve Langasek <vorlon@debian.org>  Mon, 09 Jun 2008 14:40:19 -0700
+ -- Christian Perrier <bubulle@debian.org>  Thu, 12 Jun 2008 17:17:38 +0200
 
 samba (2:3.2.0~rc1-2) experimental; urgency=low
 
