Follow new naming scheme of cups package
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba/debian@1949 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (2:3.0.30-4) UNRELEASED; urgency=low
+
+  * Rename libcupsys2-dev to libcups2-dev in build dependencies
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 13 Jun 2008 08:16:47 +0200
+
 samba (2:3.0.30-3) unstable; urgency=low
 
   [ Christian Perrier ]
