Romanian debconf translation updated
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba/debian@1978 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -7,6 +7,9 @@ samba (2:3.0.30-4) UNRELEASED; urgency=low
   [ Jelmer Vernooij ]
   * Fix bashism in smbtar. (Closes: #486056)
 
+  [ Debconf translations ]
+  * Romanian updated. Closes: #488709.
+
  -- Christian Perrier <bubulle@debian.org>  Fri, 13 Jun 2008 08:16:47 +0200
 
 samba (2:3.0.30-3) unstable; urgency=low
