Fix RAW printing for unprivileged users (regression from squeeze) Closes: #709613

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+samba (2:3.6.6-6+deb7u1) UNRELEASED; urgency=low
+
+  * Stable update for fix important bugs.
+  * Fix RAW printing for unprivileged users (regression from squeeze)
+    Closes: #709613
+
+ -- Christian Perrier <bubulle@debian.org>  Sun, 09 Jun 2013 15:01:42 +0200
+
 samba (2:3.6.6-6) unstable; urgency=low
 
   * Team upload.
