--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ samba (2:3.6.6-6+deb7u1) UNRELEASED; urgency=low
     Closes: #709613
   * Fix net rpc share allowedusers to work with 2008r2
     Closes: #711011
+  * Downgrade v4 printer driver requests to v3. Closes: #707551
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 09 Jun 2013 15:01:42 +0200
 
